--- a/components/layout/nav.module.css
+++ b/components/layout/nav.module.css
@@ -1,6 +1,12 @@
 .header {
+  border-bottom: 1px solid black;
+}
+
+.wrapper {
   display: flex;
   justify-content: space-between;
+  text-align: center;
+  margin: 0 auto;
   padding: 10px;
-  border-bottom: 2px solid black;
+  max-width: 80%;
 }
