--- a/components/product/product-list-item.module.css
+++ b/components/product/product-list-item.module.css
@@ -1,9 +1,6 @@
-.product {
-  margin: 15px;
-  border: 1px solid black;
-  padding: 10px;
-  cursor: pointer;
-
-  min-width: 30%;
-  min-height: 150px;;
+.image {
+  object-fit: contain;
+  width: 100% !important;
+  position: relative !important;
+  max-height: 200px !important;
 }
